# qoves_tech_test

./: .dockerignore  .env.example  DOCKER_README.md  Dockerfile  Makefile  POSTGRESQL_CACHE_README.md  PROMETHEUS_RICH_README.md  README.md  cache_service.py  celery_config.py  database.py  database_setup.py  docker-compose.monitoring.yml  docker-compose.simple.yml  docker-compose.yml  docker-entrypoint.sh  example_custom_segmentation.py  final_code.py  init_db.sql  landmark_finder.html  main.py  metrics.py  monitor_demo.py  payload.json  prometheus.yml  pyproject.toml  pytest.ini  rich_logging.py  run_tests.sh  run_worker.py  tasks.py  test_docker_setup.sh  test_postgres_cache.py
app/: __init__.py
app/api/: routes.py
app/core/: celery_app.py  config.py  run_worker.py
app/database/: __init__.py  connection.py  models.py  setup.py  utilities.py  utils.py
app/database/migrations/: add_perceptual_hash.py
app/models/: __init__.py  schemas.py
app/monitoring/: __init__.py  logging.py  metrics.py
app/services/: __init__.py  cache.py
app/tasks/: __init__.py  facial_processing.py
app/utils/: image_processing.py  perceptual_hash.py  svg_generation.py
docs/: PERCEPTUAL_CACHE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  README_OLD.md  RESTRUCTURING_SUMMARY.md  TESTING_GUIDE.md  TESTING_RESTRUCTURED.md
tests/: README.md  __init__.py  conftest.py  test_submit_endpoint.py  test_svg_generation.py
tests/fixtures/: README.md  valid_payload.json
