[project]
name = "qoves-tech-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.12.0.88",
    "pillow>=12.0.0",
    "pydantic>=2.12.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "svgwrite>=1.4.3",
    "uvicorn>=0.38.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "prometheus-client>=0.20.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "scipy>=1.11.0",
]
